@@ -32,6 +32,7 @@ package main;
 
 use strict;
 use warnings;
+
 use POSIX;
 use File::Basename qw(basename dirname);
 use IO::Handle;
@@ -40,7 +41,7 @@ use Sbuild qw(binNMU_version version_compare copy);
 use Data::Dumper;
 use File::Temp qw(tempdir);
 use Sbuild::Chroot;
-use Sbuild::Log qw(open_log close_log open_pkg_log close_pkg_log);
+use Sbuild::Log qw(open_log close_log);
 use Sbuild::Sysconfig qw($arch $version);
 use Sbuild::Options;
 use Sbuild::Build;
