@@ -29,7 +29,7 @@ use GDBM_File;
 use IPC::Open3;
 use Sbuild qw(binNMU_version version_compare copy isin);
 use Sbuild::Chroot qw();
-use Sbuild::Log qw(open_log close_log open_pkg_log close_pkg_log);
+use Sbuild::Log qw(open_pkg_log close_pkg_log);
 use Sbuild::Sysconfig qw($arch $hostname $version);
 use Sbuild::Conf;
 use Sbuild::Sysconfig;
@@ -2419,11 +2419,13 @@ sub chroot_arch (\$) {
 sub open_build_log (\$) {
     my $self = shift;
 
-    open_pkg_log($self->{'Package'}, $self->get_option('Distribution'),
+    open_pkg_log("$Sbuild::Conf::username-$self->{'Package_SVersion'}-$self->{'Arch'}",
+		 $self->get_option('Distribution'),
 		 $self->{'Pkg Start Time'});
     print main::PLOG "Automatic build of $self->{'Package_SVersion'} on $hostname by " .
 	"sbuild/$arch $version\n";
-    print main::PLOG "Build started at $self->{'Pkg Start Time'}\n";
+    print main::PLOG "Build started at " .
+	strftime("%Y%m%d-%H%M", localtime($self->{'Pkg Start Time'})) . "\n";
     print main::PLOG "*"x78, "\n";
 }
 
